Añadir pedidos repetidos al carrito